--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
     <div class = "navbar">
         <a href = "#home"><h1 class = "logo">Dion Calim</h1></a>
         <ul class = "navlist">
-            <li><a href = "#home">Home</a></li>
-            <li><a href = "about">About</a></li>
+            <li><a href = "home.html">Home</a></li>
+            <li><a href = "one.html">About</a></li>
             <li><a href = "projects">Projects</a></li>
             <li><a href = "contacts">Contact</a></li>
         </ul>
@@ -31,7 +31,7 @@
             <h4>Hey There,</h4>
             <h1>I am Dion Calim</h1>
             <h2>Software Engineering Student</h2>
-            <h3><button>Get to know me</button></h3>
+            <h3><button><a href="#overview-title">Get to know me</a></button></h3>
         </div>
         <div class="Photo-Shape">
             <img src="GradPhoto.jpg" height="400px">
@@ -76,8 +76,34 @@
         </div>
     </section>
 
-    <footer>
-        <h1 class = "logo">Dion Calim</h1>
+    <footer class = "footer">
+        <div>
+            <h1><a href="home.html">Dion Calim</a></h1>
+            <div class = "contacts">
+
+            </div>
+        </div>
+        <div>
+            <h2>Home</h2>
+            <ul>
+                <h4>Profile Overview</h4>
+            </ul>
+        </div>
+        <div>
+            <h2>About</h2>
+            <ul>
+                <h4>About me</h4>
+                <h4>Experience</h4>
+                <h4>Resume</h4>
+            </ul>
+        </div>
+        <div>
+            <h2>Projects</h2>
+            <ul>
+                <h4>Design</h4>
+                <h4>Programming</h4>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
