about page done without info

--- a/home.html
+++ b/home.html
@@ -84,16 +84,17 @@
             </div>
         </div>
         <div>
-            <h2>Home</h2>
+            <h2><a href="home.html">Home</a></h2>
             <ul>
-                <h4>Profile Overview</h4>
+                <h4><a href="home.html#overview-title">Profile Overview</a></h4>
             </ul>
         </div>
         <div>
-            <h2>About</h2>
+            <h2><a href = "one.html">About</a></h2>
             <ul>
-                <h4>About me</h4>
-                <h4>Experience</h4>
+                <h4><a href="one.html#about-title">About me</a></h4>
+                <h4><a href="one.html#Education-Leadership-title">Education & Leadership</a></h4>
+                <h4><a href="one.html#Experience-title">Experience</a></h4>
                 <h4>Resume</h4>
             </ul>
         </div>
