--- a/one.html
+++ b/one.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dion Calim Portfolio</title>
     <link rel="stylesheet" href="webstyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,31 +21,31 @@
         <ul class = "navlist">
             <li><a href = "home.html">Home</a></li>
             <li><a href = "one.html">About</a></li>
-            <li><a href = "projects">Projects</a></li>
+            <li><a href = "two.html">Projects</a></li>
             <li><a href = "contacts">Contact</a></li>
         </ul>
     </div> 
     <h1 id="about-title">About</h1>
-    <div class = "about">
-        <span>
+    <div class = "half-container">
+        <div>
             <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
                 the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
                 type and scrambled it to make a type specimen book. It has survived not only five centuries, but also
                  the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
                  1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
                  desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h4>
-        </span>
-        <span>
-            <img src = "Chewy.jpg" alt="Picture of Me with Chewbacca">
-        </span>
+        </div>
+        <div>
+            <img src = "images/Chewy.jpg" alt="Picture of Me with Chewbacca">
+        </div>
     </div>
 
     <h1 id="Education-Leadership-title">Education & Leadership</h1>
-    <div class = "Education">
-        <span>
-            <img src="Guelph.jpeg" alt="University of Guelph Campus">
-        </span>
-        <span>
+    <div class = "half-container">
+        <div>
+            <img src="images/Guelph.jpeg" alt="University of Guelph Campus">
+        </div>
+        <div>
             <h2>Univerity of Guelph</h2>
             <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
                 the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
@@ -53,10 +53,10 @@
                  the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
                  1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
                  desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h4>
-        </span>
+        </div>
     </div>
-    <div class = "Leadership">
-        <span>
+    <div class = "half-container">
+        <div>
             <h2>Google Developers Students Club (GDSC)</h2>
             <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
                 the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
@@ -64,10 +64,10 @@
                  the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
                  1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with 
                  desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h4>
-        </span>
-        <span>
-            <img src = "GDSC.png">
-        </span>
+        </div>
+        <div>
+            <img src = "images/GDSC.png">
+        </div>
     </div>
     <h1 id="Experience-title">Experience</h1>
     <div class="Experience">
