Done Without Information

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <li><a href = "home.html">Home</a></li>
             <li><a href = "one.html">About</a></li>
             <li><a href = "two.html">Projects</a></li>
-            <li><a href = "contacts">Contact</a></li>
+            <li><a href = "three.html">Contact</a></li>
         </ul>
     </div> 
     
@@ -100,8 +100,7 @@
         <div>
             <h2>Projects</h2>
             <ul>
-                <h4>Design</h4>
-                <h4>Programming</h4>
+                <h4><a href="two.html#projects-title">All Projects</a></h4>
             </ul>
         </div>
     </footer>
