--- a/two.html
+++ b/two.html
@@ -15,10 +15,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dion Calim Portfolio</title>
-</head>
 <body>
     <div class = "navbar">
         <a href = "home.html"><h1 class = "logo">Dion Calim</h1></a>
@@ -26,7 +22,7 @@
             <li><a href = "home.html">Home</a></li>
             <li><a href = "one.html">About</a></li>
             <li><a href = "two.html">Projects</a></li>
-            <li><a href = "contacts">Contact</a></li>
+            <li><a href = "three.html">Contact</a></li>
         </ul>
     </div> 
 
@@ -40,6 +36,29 @@
             <img src="images/background.jpeg">
         </div>
     </div>
+
+    <h1 id="projects-title">All Projects</h1>
+    <section class = "all-projects">
+        <h2>2022</h2>
+        <hr>
+        <div>
+            <ul>
+                <li><a href="four.html">Sushi Me Roll'n Food Truck (Design)</a></li>
+                <li><a href="five.html">Squared - Game (Programming)</a></li>
+            </ul>
+        </div>
+            <br>
+            <h2>2023</h2>
+            <hr>
+        <div>
+            <ul>
+                <li><a href="six.html">Quezon City Sharks Business Cards (Design)</a></li>
+                <li><a href="seven.html">Quezon City Sharks Promotion Poster (Design)</a></li>
+                <li><a href="eight.html">Quezon City Sharks Website (Design)</a></li>
+                <li><a href="nine.html">Hoops - Game (Programming)</a></li>
+            </ul>
+        </div>
+    </section>
 
     <footer class = "footer">
         <div>
@@ -65,8 +84,7 @@
         <div>
             <h2>Projects</h2>
             <ul>
-                <h4>Design</h4>
-                <h4>Programming</h4>
+                <h4><a href="two.html#projects-title">All Projects</a></h4>
             </ul>
         </div>
     </footer>
