--- a/nine.html
+++ b/nine.html
@@ -37,12 +37,17 @@
     <section class="single-container">
         <div>
             <h1>Summary</h1>
-            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-            type and scrambled it to make a type specimen book. It has survived not only five centuries, but also
-            the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
-            1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h4>
+            <h4>
+                This project was something I created over the summer of my transition to university. The process of creating
+                this game was quite fun as I never had any experience of implementing a user inteface into a game.
+            </h4>
+            <h4>
+                I developed a game called Hoops using Processing. It features a basketball that jumps towards the 
+                direction of your mouse upon a mouse click and free falls when no click is detected. The objective of 
+                the game is to score as many baskets as possible before the time limit expires. Additionally, pink time
+                balls appear throughout the game; when your ball hits one, it adds more time, providing you with extra 
+                opportunities to surpass your high score.
+            </h4>
         </div>
     </section>
 
@@ -71,13 +76,12 @@
         <div>
             <h2><a href = "one.html">About</a></h2>
             <ul>
-                <h4><a href="one.html#about-title">About me</a></h4>
                 <h4><a href="one.html#Education-Leadership-title">Education & Leadership</a></h4>
                 <h4><a href="one.html#Experience-title">Experience</a></h4>
             </ul>
         </div>
         <div>
-            <h2>Projects</h2>
+            <h2><a href = "two.html">Projects</a></h2>
             <ul>
                 <h4><a href="two.html#projects-title">All Projects</a></h4>
             </ul>
