--- a/five.html
+++ b/five.html
@@ -37,12 +37,18 @@
     <section class="single-container">
         <div>
             <h1>Summary</h1>
-            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-            type and scrambled it to make a type specimen book. It has survived not only five centuries, but also
-            the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
-            1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h4>
+            <h4>In this game, the goal is to reach a 1024 tile. The goal of the game is to Merge tiles of the same value by 
+                moving them up, down, left, or right. Merge successfully to create higher values, with the 
+                ultimate goal of reaching 1024. You lose the game if all tiles are filled and you can no longer make any moves.
+                If you succeed or fail, the game prompts you to play again or return to the main menu.
+            </h4>
+
+            <h4>
+                The game is programmed using double for loops to iterate through each tile and if statements for correct
+                tile merging. The random generated tiles are created by utilizing the random class for generating the values.
+                This project was my final project in grade 11 for my Computer Science class and gave me fundamental hands on learning
+                about the benefits of using user defined functions.
+            </h4>
         </div>
     </section>
 
@@ -71,13 +77,12 @@
         <div>
             <h2><a href = "one.html">About</a></h2>
             <ul>
-                <h4><a href="one.html#about-title">About me</a></h4>
                 <h4><a href="one.html#Education-Leadership-title">Education & Leadership</a></h4>
                 <h4><a href="one.html#Experience-title">Experience</a></h4>
             </ul>
         </div>
         <div>
-            <h2>Projects</h2>
+            <h2><a href = "two.html">Projects</a></h2>
             <ul>
                 <h4><a href="two.html#projects-title">All Projects</a></h4>
             </ul>
