--- a/four.html
+++ b/four.html
@@ -36,12 +36,22 @@
     <section class="single-container">
         <div>
             <h1>Summary</h1>
-            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-            type and scrambled it to make a type specimen book. It has survived not only five centuries, but also
-            the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
-            1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h4>
+            <h4>Sushi Me Roll'n was assigned as the culmination of my Grade 11 Media Arts class. Crafted with
+                meticulous attention to detail, the food truck's design was crafted on Photoshop. The distinctive 
+                logo, embodying the face of our brand, was brought to life using Illustrator, while the menu, a 
+                cornerstone of our culinary narrative, found its form  on InDesign.
+            </h4>
+            <h4>
+                The name, "Sushi Me Roll'n," serves as a playful twist on the lyrics "you see me rollin", and cleverly
+                implemented into our logo in a striking, attention-grabbing font. Drawing inspiration from a colour 
+                palette aimed at evoking warmth and friendliness, vibrant shades of red, yellow, black, white, and
+                hints of green adorn the truck, resonating with a sense of excitement and approachability.
+            </h4>
+            <h4>
+                Seen all around the truck are the cartoon sushi figures, strategically placed intended to entice 
+                viewers to explore the food we have to offer. Each element are meticulously selected and thoughtfully 
+                integrated to our design with hopes to invite viewers to take a stroll at Sushi Me Roll'n
+            </h4>
         </div>
     </section>
 
@@ -50,6 +60,7 @@
         <h1>Tools Used</h1>
             <ul>
                 <li>Illustrator</li>
+                <li>Photoshop</li>
                 <li>Indesign</li>
             </ul>
         </div>
@@ -71,13 +82,12 @@
         <div>
             <h2><a href = "one.html">About</a></h2>
             <ul>
-                <h4><a href="one.html#about-title">About me</a></h4>
                 <h4><a href="one.html#Education-Leadership-title">Education & Leadership</a></h4>
                 <h4><a href="one.html#Experience-title">Experience</a></h4>
             </ul>
         </div>
         <div>
-            <h2>Projects</h2>
+            <h2><a href = "two.html">Projects</a></h2>
             <ul>
                 <h4><a href="two.html#projects-title">All Projects</a></h4>
             </ul>
