--- a/seven.html
+++ b/seven.html
@@ -36,12 +36,16 @@
     <section class="single-container">
         <div>
             <h1>Summary</h1>
-            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-            type and scrambled it to make a type specimen book. It has survived not only five centuries, but also
-            the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
-            1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h4>
+            <h4>
+                The Quezon City project was my grade 12 Media Arts year long assignment, where we were responsible for 
+                creating the basic foundations of creating a brand. The logo was created using illustrator and is commonly
+                used throughout the mini projects within the Quezon City collection as the main focal point.
+            </h4>
+            <h4>I have designed here a game day poster for the historic night of the Sharks’ Home Opener. The poster
+                consists of a sunset background to match the team logo colours and the habitat of the shark. I also have eye
+                catching orange text boxes filled with game information to attract the consumer’s eye. The poster has 
+                our team slogan in addition to action photos of what fans should expect to see at the game.
+            </h4>
         </div>
     </section>
 
@@ -71,13 +75,12 @@
         <div>
             <h2><a href = "one.html">About</a></h2>
             <ul>
-                <h4><a href="one.html#about-title">About me</a></h4>
                 <h4><a href="one.html#Education-Leadership-title">Education & Leadership</a></h4>
                 <h4><a href="one.html#Experience-title">Experience</a></h4>
             </ul>
         </div>
         <div>
-            <h2>Projects</h2>
+            <h2><a href = "two.html">Projects</a></h2>
             <ul>
                 <h4><a href="two.html#projects-title">All Projects</a></h4>
             </ul>
