--- a/six.html
+++ b/six.html
@@ -36,12 +36,17 @@
     <section class="single-container">
         <div>
             <h1>Summary</h1>
-            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-            type and scrambled it to make a type specimen book. It has survived not only five centuries, but also
-            the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
-            1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h4>
+            <h4>
+                The Quezon City project was my grade 12 Media Arts year long assignment, where we were responsible for 
+                creating the basic foundations of creating a brand. The logo was created using illustrator and is commonly
+                used throughout the mini projects within the Quezon City collection as the main focal point.
+            </h4>
+            <h4>
+                In this mini project, I crafted both the front and back designs of the Quezon City Sharks' Business Cards.
+                To honor the team's hometown, I incorporated the Quezon City skyline into my design. On the front, I 
+                featured the team slogan in a medium-sized, straightforward graffiti font, ensuring it complements 
+                rather than overshadows our logo. The back of the card includes vital contact details such as phone 
+                numbers, websites, emails, and social media account handles.</h4>
         </div>
     </section>
 
@@ -72,13 +77,12 @@
         <div>
             <h2><a href = "one.html">About</a></h2>
             <ul>
-                <h4><a href="one.html#about-title">About me</a></h4>
                 <h4><a href="one.html#Education-Leadership-title">Education & Leadership</a></h4>
                 <h4><a href="one.html#Experience-title">Experience</a></h4>
             </ul>
         </div>
         <div>
-            <h2>Projects</h2>
+            <h2><a href = "two.html">Projects</a></h2>
             <ul>
                 <h4><a href="two.html#projects-title">All Projects</a></h4>
             </ul>
