--- a/three.html
+++ b/three.html
@@ -31,14 +31,14 @@
             <h1>Contact Me</h1>
             <h3>Feel Free to contact me at any time and check out my GitHub</h3>
             <ul>
-                <li><img src="images/apple.png"></li>
-                <li><img src="images/github.png"></li>
-                <li><img src="images/linkedin-logo.png"></li>
+                <li><a href="mailto:Dioncalim@gmail.com"><img src="images/apple.png"></a></li>
+                <li><a href="https://github.com/Dcalim" target="_blank"><img src="images/github.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/dion-calim-97b71b2ab/" target="_blank"><img src="images/linkedin-logo.png"></a></li>
                 <li></li>
             </ul>
         </div>
         <div>
-            <img src="images/contact.jpg">
+            <img src="images/gryphon.jpg">
         </div>
     </section>
 
@@ -58,13 +58,12 @@
         <div>
             <h2><a href = "one.html">About</a></h2>
             <ul>
-                <h4><a href="one.html#about-title">About me</a></h4>
                 <h4><a href="one.html#Education-Leadership-title">Education & Leadership</a></h4>
                 <h4><a href="one.html#Experience-title">Experience</a></h4>
             </ul>
         </div>
         <div>
-            <h2>Projects</h2>
+            <h2><a href = "two.html">Projects</a></h2>
             <ul>
                 <h4><a href="two.html#projects-title">All Projects</a></h4>
             </ul>
