--- a/two.html
+++ b/two.html
@@ -38,6 +38,7 @@
     </div>
 
     <h1 id="projects-title">All Projects</h1>
+    <h2 id="more-info">Click on a Project for more info</h2>
     <section class = "all-projects">
         <h2>2022</h2>
         <hr>
@@ -76,13 +77,12 @@
         <div>
             <h2><a href = "one.html">About</a></h2>
             <ul>
-                <h4><a href="one.html#about-title">About me</a></h4>
                 <h4><a href="one.html#Education-Leadership-title">Education & Leadership</a></h4>
                 <h4><a href="one.html#Experience-title">Experience</a></h4>
             </ul>
         </div>
         <div>
-            <h2>Projects</h2>
+            <h2><a href = "two.html">Projects</a></h2>
             <ul>
                 <h4><a href="two.html#projects-title">All Projects</a></h4>
             </ul>
